<resources>

    <!-- App Name -->
    <string name="app_name">BellPou</string>

    <!-- Navbar -->
    <string name="login_nav_text">Login / Register</string>
    <string name="map_nav_text">Trash Map</string>
    <string name="profile_nav_text">Profile</string>
    <string name="rewards_nav_text">Rewards</string>


    <!-- Loading page -->
    <string name="loading">Loading... please wait</string>
    <string name="loading_error">Error while launching the app, try to close and re-open the app and verify your internet connexion.</string>

    <!-- Login page -->
    <string name="email_text">"Email : "</string>
    <string name="email_hint">Enter your email here</string>
    <string name="password_text">Password : </string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>

    <!-- Register page -->
    <string name="register_title"><u><b>Register</b></u></string>
    <string name="register_first_name_text">First name : </string>
    <string name="register_first_name_hint">Enter your first name here</string>
    <string name="register_last_name_text">Last name : </string>
    <string name="register_last_name_hint">Enter your last name here</string>
    <string name="register_birthdate_text">"Birth Date : "</string>
    <string name="register_email_text">Email : </string>
    <string name="register_email_hint">Enter your email here</string>
    <string name="register_password_text">Password : </string>
    <string name="register_password_hint">Enter your password here</string>
    <string name="register_repeat_password_text">Repeat Password : </string>
    <string name="register_repeat_password_hint">Repeat your password here</string>
    <string name="register_submit">Submit</string>

    <!-- Profile page -->
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_email">Email</string>
    <string name="profile_birthdate">Birthdate</string>
    <string name="profile_throins">Number of Throins</string>

    <!-- Rewards -->
    <string name="reward_cost_suffix">Throins</string>
    <string name="received_reward">You bough a reward and there is your discount code :  </string>

    <!-- QR Scan Activity -->
    <string name="trash_signaled">The trash has been signaled, thanks for your collaboration !</string>
    <string name="camera_initialization_failed">Your camera is not working.. try again !</string>
    <string name="camera_permission_granted">Camera permission granted</string>
    <string name="camera_permission_denied">Camera permission denied</string>

    <!-- Exceptions message -->
    <string name="api_connection_error">Error connecting to the server, verify your internet connection.</string>
    <string name="api_unknown_error">An error occurred while connecting to the API. Try again or contact the operator of the application.</string>
    <string name="api_user_not_found">Wrong username or password</string>
    <string name="email_not_correct">The email format is not correct</string>
    <string name="first_name_empty">You must enter a first name</string>
    <string name="last_name_empty">You must enter a last name</string>
    <string name="email_empty">You must enter an email</string>
    <string name="password_empty">You must enter a password</string>
    <string name="password_no_match">Both passwords should be equal</string>
    <string name="no_user_in_db">There is no user in the internal database</string>
    <string name="profile_logout">Logout</string>
    <string name="no_trash_found">Could not get any trash from the server.</string>
    <string name="no_trash_found_qr">Could not get any trash from the QR code scanned.</string>
    <string name="trash_already_scanned">You can\'t scan a trash twice.</string>
    <string name="no_user_in_memory">There is no user in the memory of the phone.</string>
    <string name="no_token_in_memory">There is no token in the memory</string>
    <string name="to_poor_to_buy">You don\'t have enough Throins to buy this..</string>
    <string name="already_registered">You are already registered to BellPou</string>

</resources>