<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.henallux.bellpou.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/login_logo"

            android:layout_width="264dp"
            android:layout_height="187dp"
            android:layout_marginTop="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:src="@drawable/ic_belpou"/>

        <TextView
            android:id="@+id/login_email_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_logo"

            android:text="@string/email_text"/>

        <EditText
            android:id="@+id/login_email_editText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email_text"

            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/login_password_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email_editText"

            android:text="@string/password_text"/>

        <EditText
            android:id="@+id/login_password_editText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_text"

            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"

            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            app:layout_constraintTop_toBottomOf="@id/login_password_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/login_button_text"
            android:onClick="@{(view)->vm.onButtonLoginClick(view)}" />

        <Button
            android:id="@+id/register_button"

            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button"

            android:text="@string/register_button_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>