<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.text.InputType" />
        
        <variable
            name="vm"
            type="com.henallux.bellpou.viewmodel.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register_title"
            style="@style/title"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:text="@string/register_title"
            />


        <include
            android:id="@+id/first_name"
            layout="@layout/register_line"
            style="@style/register_fields"

            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@id/register_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:fieldName="@{@string/register_first_name_text}"
            app:fieldHint="@{@string/register_first_name_hint}"
            app:inputType="@{`text`}" />

        <include
            android:id="@+id/last_name"
            layout="@layout/register_line"
            style="@style/register_fields"


            app:layout_constraintTop_toBottomOf="@id/first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:fieldName="@{@string/register_last_name_text}"
            app:fieldHint="@{@string/register_last_name_hint}"
            app:inputType="@{`text`}" />

        <TextView
            android:id="@+id/birthdate_title"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name"

            android:text="@string/register_birthdate_text" />

        <DatePicker
            android:id="@+id/birthdate"

            android:layout_width="wrap_content"
            android:layout_height="100dp"

            app:layout_constraintTop_toBottomOf="@id/birthdate_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            />

        <include
            android:id="@+id/email"
            layout="@layout/register_line"
            style="@style/register_fields"

            app:layout_constraintTop_toBottomOf="@id/birthdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:fieldName="@{@string/register_email_text}"
            app:fieldHint="@{@string/register_email_hint}"
            app:inputType="@{`mail`}" />

        <include
            android:id="@+id/password"
            layout="@layout/register_line"
            style="@style/register_fields"

            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:fieldName="@{@string/register_password_text}"
            app:fieldHint="@{@string/register_password_hint}"
            app:inputType="@{`password`}" />

        <include
            android:id="@+id/repeat_password"
            layout="@layout/register_line"
            style="@style/register_fields"

            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:fieldName="@{@string/register_repeat_password_text}"
            app:fieldHint="@{@string/register_repeat_password_hint}"
            app:inputType="@{`password`}" />

        <Button
            android:id="@+id/register_submit_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            app:layout_constraintTop_toBottomOf="@id/repeat_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/register_submit"
            android:onClick="@{(view)->vm.onButtonRegisterClick(view)}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>